fix issues and alignments and added items

--- a/AddToCart.css
+++ b/AddToCart.css
@@ -10,12 +10,13 @@ header {
     align-items: center;
     background: #ff6b35;
     color: #fff;
-    padding: 22px 26px 20px;
+    padding-left: 22px;
+    padding-right: 22px;
     justify-content: space-between;
 }
 
 .logo {
-    font-size: 2em;
+    font-size: 28px;
     font-weight: bold;
 }
 .logo span { color: #ffe66d; }
